src/test/resources/parser/valid/multiplicationNum.sbsc
// Test multiplication

println(str(4.0 * 2.0));