src/test/resources/parser/invalid/cast/badNumCast.sbsc
// parser should error at invalid cast

println(num(2.4));